hetzner/k8s/grafana_secrets/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability-monitoring
  labels:
    app.kubernetes.io/managed-by: argocd
